--- a/main/reka-http/pom.xml
+++ b/main/reka-http/pom.xml
@@ -47,10 +47,13 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative</artifactId>
+			<version>1.1.30.Fork1</version>
+			<!--
 			<version>1.1.30.Fork1-openssl-1.0.0</version>
-			<classifier>linux-x86_64</classifier>
-			<!--  
+			-->
 			<classifier>${os.detected.classifier}</classifier>
+			<!--  
+			<classifier>linux-x86_64</classifier>
 			-->
 		</dependency>
 		<dependency>
@@ -62,13 +65,11 @@
 
 	<build>
 		<extensions>
-		  <!-- 
 			<extension>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
 				<version>1.2.3.Final</version>
 			</extension>
-			 -->
 		</extensions>
 	</build>
 
