--- a/modules/reka-git/pom.xml
+++ b/modules/reka-git/pom.xml
@@ -15,6 +15,7 @@
 			<groupId>io.reka</groupId>
 			<artifactId>reka-core</artifactId>
 			<version>${core.version}</version>
+      		<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
