--- a/modules/reka-jade/pom.xml
+++ b/modules/reka-jade/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>io.reka</groupId>
 	<artifactId>reka-jade</artifactId>
 	<version>0.1.0</version>
-	
+
 	<properties>
 		<core.version>0.1.0</core.version>
 	</properties>
@@ -16,24 +16,24 @@
 			<version>${core.version}</version>
 			<scope>provided</scope>
 		</dependency>
-    <dependency>
-      <groupId>de.neuland</groupId>
-      <artifactId>jade4j</artifactId>
-      <version>0.3.12</version>
-    </dependency>
+		<dependency>
+			<groupId>de.neuland-bfi</groupId>
+			<artifactId>jade4j</artifactId>
+			<version>0.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-		  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -75,5 +75,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
