Makefile-ized some stuff, implement @env macro

--- a/modules/reka-validation/pom.xml
+++ b/modules/reka-validation/pom.xml
@@ -4,9 +4,9 @@
   <artifactId>reka-validation</artifactId>
   <version>0.1.0</version>
   
-  
   <properties>
     <core.version>0.1.0</core.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
