--- a/modules/reka-gitfordata/pom.xml
+++ b/modules/reka-gitfordata/pom.xml
@@ -9,6 +9,7 @@
 	
 	<properties>
 	  <core.version>0.1.0</core.version>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
