--- a/modules/reka-hazelcast/pom.xml
+++ b/modules/reka-hazelcast/pom.xml
@@ -8,6 +8,7 @@
 	
 	<properties>
     <core.version>0.1.0</core.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
 	<dependencies>
