--- a/modules/reka-mustache/pom.xml
+++ b/modules/reka-mustache/pom.xml
@@ -3,8 +3,10 @@
   <groupId>io.reka</groupId>
   <artifactId>reka-mustache</artifactId>
   <version>0.1.0</version>
-    <properties>
+  
+  <properties>
     <core.version>0.1.0</core.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -23,15 +25,6 @@
   
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
