--- a/bundles/reka-http/pom.xml
+++ b/bundles/reka-http/pom.xml
@@ -48,16 +48,34 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative</artifactId>
-			<version>1.1.30.Fork1</version>
+			<version>1.1.30.Fork2</version>
 			<!--
 			<version>1.1.30.Fork1-openssl-1.0.0</version>
 			-->
 			
-			<classifier>${os.detected.classifier}</classifier>
-			<!--  
 			<classifier>linux-x86_64</classifier>
+			<!--
+			<classifier>${os.detected.classifier}</classifier>
+			 -->
+			<!--  
 			-->
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-tcnative</artifactId>
+			<version>1.1.30.Fork2</version>
+			<!--
+			<version>1.1.30.Fork1-openssl-1.0.0</version>
+			-->
+			
+			<classifier>osx-x86_64</classifier>
+			<!--
+			<classifier>${os.detected.classifier}</classifier>
+			 -->
+			<!--  
+			-->
+		</dependency>
+		
 		<dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
