--- a/bundles/reka-http/pom.xml
+++ b/bundles/reka-http/pom.xml
@@ -48,7 +48,9 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative</artifactId>
-			<version>1.1.30.Fork2</version>
+			<!-- this is a fork of the fork :) 
+			     compiled for openssl 1.0.1, should be in the local repo -->
+			<version>1.1.30.Fork2-openssl-1.0.1</version> 
 			<classifier>linux-x86_64</classifier>
 		</dependency>
 		<dependency>
@@ -64,8 +66,25 @@
 		</dependency>
 	</dependencies>
 
+  <repositories>
+    <repository>
+      <!--  http://stackoverflow.com/questions/364114/can-i-add-jars-to-maven-2-build-classpath-without-installing-them -->
+      <id>repo</id>
+      <name>reka-http</name>
+      <releases>
+        <enabled>true</enabled>
+        <checksumPolicy>ignore</checksumPolicy>
+      </releases>
+      <url>file://${project.basedir}/repo</url>
+    </repository>
+  </repositories>
+
 	<build>
 		<plugins>
+      <plugin>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.1</version>
+      </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
