add http sessions, move reka-main.jar to reka.jar

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM relateiq/oracle-java8
 RUN apt-get -y install libapr1 graphviz
 RUN ln -s /usr/bin/dot /usr/local/bin/dot
 
-ADD reka-main.jar reka-main.jar
+ADD reka.jar reka.jar
 ADD config config
 
 CMD ["java", "-jar", "reka-main.jar", "config/main.reka"]
