run with relative path

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,4 @@ RUN ln -s /usr/bin/dot /usr/local/bin/dot
 ADD reka.jar reka.jar
 ADD config config
 
-CMD ["java", "-jar", "reka-main.jar", "config/main.reka"]
+CMD ["java", "-jar", "reka.jar", "config/main.reka"]
