--- a/reka-deploy/roles/java8/tasks/main.yml
+++ b/reka-deploy/roles/java8/tasks/main.yml
@@ -4,8 +4,8 @@
 - name: add webup8team/java repo
   command: 'add-apt-repository -y ppa:webupd8team/java'
 
-- name: update apt cache
-  apt: update_cache=true
+#- name: update apt cache
+#  apt: update_cache=true
 
 - name: oracle license - select
   shell: 'echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections'
