--- a/main/reka-core/pom.xml
+++ b/main/reka-core/pom.xml
@@ -40,6 +40,11 @@
 			<version>1.9.12</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>args4j</groupId>
 			<artifactId>args4j</artifactId>
 			<version>2.0.26</version>
