oh, loads of stuff, just about to make router keys though

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>io.reka</groupId>
 	<artifactId>reka-all</artifactId>
 	<version>0.1.0</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
