--- a/main/reka-core/pom.xml
+++ b/main/reka-core/pom.xml
@@ -46,7 +46,14 @@
 		</dependency>
 
 		<!-- I'd like to remove these from core -->
-
+		
+		<!-- 
+		<dependency>
+			<groupId>net.openhft</groupId>
+			<artifactId>chronicle</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		 -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
