--- a/all/pom.xml
+++ b/all/pom.xml
@@ -24,6 +24,16 @@
 			<artifactId>reka-http</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-mustache</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-jade</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
