--- a/all/pom.xml
+++ b/all/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>reka-jsx</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-less</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
