--- a/main/reka-core/pom.xml
+++ b/main/reka-core/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 
 		<!-- I'd like to remove these from core -->
+
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>2.7.6</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>commons-io</groupId>
