moved some stuff to reka-common

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -21,5 +21,6 @@
     <module>reka-twilio</module>
     <module>reka-less</module>
     <module>reka-jsx</module>
+    <module>reka-common</module>
   </modules>
 </project>
