--- a/bundles/reka-http/pom.xml
+++ b/bundles/reka-http/pom.xml
@@ -25,11 +25,6 @@
 			<version>4.2.5</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>14.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.0.23.Final</version>
@@ -41,7 +36,7 @@
 				be in the local repo -->
 			<version>1.1.30.Fork2-openssl-1.0.1</version>
 			<classifier>linux-x86_64</classifier>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative</artifactId>
@@ -58,6 +53,11 @@
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
 		</dependency>
 	</dependencies>
 
