--- a/bundles/reka-jdbc/pom.xml
+++ b/bundles/reka-jdbc/pom.xml
@@ -35,6 +35,11 @@
 			<version>9.3-1101-jdbc41</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.0</version>
