--- a/all/pom.xml
+++ b/all/pom.xml
@@ -16,6 +16,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.reka</groupId>
+			<artifactId>reka-common</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
 			<artifactId>reka-core</artifactId>
 			<version>0.1.0</version>
 		</dependency>
