--- a/all/pom.xml
+++ b/all/pom.xml
@@ -51,7 +51,17 @@
 		</dependency>
 		<dependency>
 			<groupId>io.reka</groupId>
-			<artifactId>reka-jdbc</artifactId>
+			<artifactId>reka-base-jdbc</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-postgres</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-h2</artifactId>
 			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
