--- a/modules/reka-smtp/pom.xml
+++ b/modules/reka-smtp/pom.xml
@@ -50,11 +50,26 @@
 			</exclusions>
 		</dependency>
 
+	<!-- 
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.5</version>
 		</dependency>
+		 -->
+		 
+<dependency>
+	<groupId>javax.mail</groupId>
+	<artifactId>mail</artifactId>
+	<version>1.4.7</version>
+</dependency>
+
+		 <dependency>
+	<groupId>commons-io</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>2.4</version>
+</dependency>
+		 
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
