--- a/modules/reka-jdbc-common/pom.xml
+++ b/modules/reka-jdbc-common/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>reka-base-jdbc</artifactId>
+	<artifactId>reka-jdbc-common</artifactId>
 	<groupId>io.reka</groupId>
 	<version>0.1.0</version>
 
