added exec operation, few more nashorn fixes, adder module

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -11,7 +11,7 @@
 
   <modules>
     <module>reka-jdbc-common</module>
-    <module>reka-command</module>
+    <module>reka-exec</module>
     <module>reka-net</module>
     <module>reka-jade</module>
     <module>reka-jruby</module>
