--- a/all/pom.xml
+++ b/all/pom.xml
@@ -36,6 +36,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.reka</groupId>
+			<artifactId>reka-exec</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
 			<artifactId>reka-jade</artifactId>
 			<version>0.1.0</version>
 		</dependency>
