--- a/main/reka-core/pom.xml
+++ b/main/reka-core/pom.xml
@@ -19,6 +19,11 @@
 			<version>0.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>reka</groupId>
+			<artifactId>bouncycastle-loader</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
