fixedup a few project layout stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
 **/target
-**/dependency-reduced-pom.xml
 **/.reka
 **/.classpath
 **/.settings
 **/.project
 **/*.log
 **/*.iml
-*/**/.gitignore
-bundles/clojure-env/build
 docker/**/*.jar
 dist
-.java-home
-build
-**.h2.db
-**.trace.db
-all/rekadata/
-rekadata
+env.make
+**/rekadata
