--- a/reka-module-email/pom.xml
+++ b/reka-module-email/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>reka-module-smtp</artifactId>
+	<artifactId>reka-module-email</artifactId>
 	<groupId>io.reka</groupId>
 	<version>0.1.0</version>
 
@@ -55,41 +55,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<!-- <dependency> <groupId>javax.mail</groupId> <artifactId>mail</artifactId> 
-			<version>1.4.5</version> </dependency> -->
-
-
-<!-- 
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
-		</dependency>
-		 -->
-
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
 			<version>1.3.3</version>
-			<!-- 
-			<exclusions>
-				<exclusion>
-					<artifactId>activation</artifactId>
-					<groupId>javax.activation</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>mail</artifactId>
-					<groupId>javax.mail</groupId>
-				</exclusion>
-			</exclusions>
-			 -->
 		</dependency>
 	</dependencies>
 
@@ -114,7 +88,7 @@
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 						<manifestEntries>
-							<Reka-Module>reka.smtp.SmtpModule</Reka-Module>
+							<Reka-Module>reka.email.EmailModule</Reka-Module>
 						</manifestEntries>
 					</archive>
 				</configuration>
